k8s/security/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature

spec:
  validationFailureAction: Enforce
  rules:
  - name: check-image-signature
    match:
      resources:
        kinds:
        - Pod

    exclude:
      resources:
        namespaces:
        - falco   

    verifyImages:
    - image: "docker.io/shadab256/*"
      key: |
        -----BEGIN PUBLIC KEY-----
        MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE0p6Sy0jJm+HPBk87GpGK/VvVGDfg
[...]
        -----END PUBLIC KEY-----
